@@ -8,6 +8,8 @@ endif
 
 SUBDIRS = ${DLLWRAPPER} src
 
+ACLOCAL_AMFLAGS = -I m4
+
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = libbml.pc
 
