@@ -342,7 +342,7 @@ toplevel_check $srcfile
 
 # aclocal
 if test -f acinclude.m4; then rm acinclude.m4; fi
-tool_run "$aclocal" "$ACLOCAL_FLAGS"
+tool_run "$aclocal" "-I m4 $ACLOCAL_FLAGS"
 
 tool_run "$libtoolize" "--copy --force"
 tool_run "$autoheader"
